--- a/yodacast/dashboard/css/style.css
+++ b/yodacast/dashboard/css/style.css
@@ -14,3 +14,8 @@ and open the template in the editor.
 .invisible-drop-down {
    display: none !important;
 }
+
+#callVolumeGraph {
+	margin-top: 30px !important;
+	margin-bottom: 25px;
+}
